# we-relate

./: .dockerignore  .env.example  .gitignore  CLOUD_RUN_DEPLOYMENT.md  CLOUD_TESTING.md  DEMO_MODE_GUIDE.md  Dockerfile  GOOGLE_OAUTH_SETUP.md  MIGRATION_SUMMARY.md  PHOENIX_SETUP.md  README.md  app.db  app.py  deploy.sh  dev_launch.sh  docker-compose.yml  phoenix_config.py  pyproject.toml  requirements.txt  run.py  setup.py  test_cloud_deployment.py  test_final_integration.py  test_phoenix_advanced.py  test_phoenix_config.py  test_phoenix_tracing.py
.chainlit/: config.toml
chainlit-service/: Dockerfile  ERROR_HANDLING_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SPEAKER_REFACTORING_SUMMARY.md  app.py  chainlit.md  config.py  conversation.py  core.py  demo_error_handling.py  requirements.txt  stages.py  test_error_handling.py  test_refactored_architecture.py  ui_controller.py
chainlit-service/.chainlit/: config.toml
chainlit-service/agents/: __init__.py  student.py  teacher.py
chainlit-service/logs/: Teacher.tsv
cloud-run/: README.md  deploy-chainlit.yaml  deploy-flask.yaml  deploy-phoenix.yaml  deploy.sh  health-check.sh  setup-secrets.sh
flask-app/: Dockerfile  GOOGLE_AUTH_SETUP.md  __init__.py  api_routes.py  app.db  app.py  app_backup.db  app_minimal.py  config.py  database.py  phoenix_proxy.py  requirements.txt  routes.py
flask-app/auth/: __init__.py  (+3 more)
phoenix-service/: Dockerfile
templates/: base.html  chat.html  conversation.html  edit_person.html  index.html  login.html  message_partial.html  new_person.html  people.html
venv-3.12/: pyvenv.cfg
(+22 files in other folders)
